2003-07-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (PSEUDO): Use
	different symbol for the cancellation syscall wrapper and
	non-cancellation syscall wrapper.
	(PSEUDO_END): Define.

2003-07-05  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/elf/pt-initfini.c: Avoid .ent/.end.

2003-06-20  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sysdep-cancel.h: Support cancellation
	in librt.

2003-06-21  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/sysdep-cancel.h: Support cancellation
	in librt.

2003-06-20  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/Makefile (libpthread-routines):
	Remove ptw-osf_sigprocmask.

2003-06-18  Jakub Jelinek  <jakub@redhat.com>

	* internals.h (__librt_multiple_threads, __librt_enable_asynccancel,
	__librt_disable_asynccancel): Declare.
	(LIBC_CANCEL_ASYNC, LIBC_CANCEL_RESET, LIBC_CANCEL_HANDLED): Define
	for IS_IN_librt.
	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Support cancellation
	in librt.
	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep-cancel.h: Likewise.
	* sysdeps/x86_64/tcb-offsets.sym: New file.
	* sysdeps/x86_64/Makefile: New file.
	* sysdeps/x86_64/tls.h (tcbhead_t): Add multiple_threads.
	* Versions (libc): Export __librt_enable_asynccancel,
	__librt_disable_asynccancel and __librt_multiple_threads as
	GLIBC_PRIVATE.
	* libc-cancellation.c (__librt_multiple_threads,
	__librt_enable_asynccancel, __librt_disable_asynccancel): New aliases.
