@@ -1,3 +1,8 @@
+2003-07-14  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep-cancel.h: Fix typo
+	in test for compilation in libc.
+
 2003-07-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (PSEUDO): Use
